fix: fix z-index issue

--- a/src/Routes/style.scss
+++ b/src/Routes/style.scss
@@ -103,7 +103,7 @@ p {
 }
 
 .web3modal-modal-lightbox {
-  z-index: 10 !important;
+  z-index: 10001 !important;
   background: rgba(0, 0, 0, 0.2) !important;
   backdrop-filter: blur(100px) !important;
 
