--- a/src/views/Landing/landing.scss
+++ b/src/views/Landing/landing.scss
@@ -5,7 +5,7 @@
   color: #1d2654;
 
   .ido-check {
-    z-index: 99999;
+    z-index: 10000;
   }
 
   .ido-container {
